force-app/main/default/objects/Lab__c/Lab__c.object-meta.xml
<CustomObject>
    <label>Lab</label>
    <nameField>
        <label>Lab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>