force-app/main/default/objects/Lab__c/fields/eLab_Enabled__c.field-meta.xml
<CustomField>
    <fullName>eLab_Enabled__c</fullName>
    <label>eLab Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>eLab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>