force-app/main/default/objects/Lab__c/fields/Lab_Id__c.field-meta.xml
<CustomField>
    <fullName>Lab_Id__c</fullName>
    <label>Lab Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>