force-app/main/default/objects/Lab__c/fields/Lab_Type__c.field-meta.xml
<CustomField>
    <fullName>Lab_Type__c</fullName>
    <label>Lab Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>eLab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>