force-app/main/default/objects/Lab__c/fields/LOINC_Code__c.field-meta.xml
<CustomField>
    <fullName>LOINC_Code__c</fullName>
    <label>LOINC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>